Created page with "Munin is a networked resource monitoring tool that can help analyze resource trends and "what just happened to kill our performance?" problems.  Munin implements a master and sla..."

--- a/Munin.mw
+++ b/Munin.mw
@@ -1,255 +1,51 @@
-{{InfoBox stack
-|{{InfoBox homepage|http://www.munin-monitoring.org|header=true}}
-|{{InfoBox wikipedia|Munin (network monitoring application)}}
-}}
-'''Munin''' is a networked resource monitoring tool that can help analyze resource trends and "what just happened to kill our performance?" problems.
+Munin is a networked resource monitoring tool that can help analyze resource trends and "what just happened to kill our performance?" problems.
 
-Munin implements a master and slave node structure; one master node with many slave nodes. The master node gathers data from the slave nodes, and produces HTML output. Generally these will be placed in the directory accessible via a web server, and can be viewed with a web browser.
+Munin implements a master and slave node structure; one master node with many slave nodes. The master node gathers data from the slave nodes, and produces HTML output. Generally these will be placed in the directory accessible via a web server, however you could view them locally with a web browser.
 
-== USE flags ==
-The USE flags for Munin are handled in a peculiar way: most of the flags are related to the node, rather than the master (with a few, more or less obvious, exceptions), and are designed to bring in the required dependencies. When the flags are disabled, the plugins are '''not''' removed from the package, which means that it's sufficient to just merge the dependencies to get them working, instead of rebuilding Munin. This has been decided because the plugins are generally static, for what concern dependencies.
-
-A notable exception is the <code>java</code> USE flag that actually does remove some plugins. The reason is simply that for the plugins to work, you need a JAR library that is part of Munin, and is thus only built with the flag enabled, so you'd still be rebuilding the package to enable or disable it.
-
-{{USEflag|package=net-analyzer/munin}}
-
-== Installation and setup ==
-The installation of Munin is easy enough, as it only requires to install the one package {{Package|net-analyzer/munin}}, and contains no extra plugins or anything, by default.
-
-{{Emerge|munin}}
-
-But since Munin is fundamentally made of two components – the ''node'' and the ''master'' – you should first decide which of the two configurations you want to set up for any given box.
-
-Note: some of the configuration coming up is going to use the {{c|sudo}} command. This is required because by default the plugins and the master scripts are executed as the munin user. If you prefer you can easily perform the actions using {{c|su}} instead.
-
-=== Node (client) ===
-Munin nodes have the task of reporting the results of a series of scripts (called plugins), which report data in a structured format so that the master can log the values and generate a report. Usually you set up one node for each box you intend to monitor, including the master.
-
-To set up a simple node, which only has to gather data and does not have to produce the reports, you're recommended to enable the <code>minimal</code> USE flag — by doing so, you're avoiding a number of extra dependencies that only involve the master, namely {{Package|net-analyzer/rrdtool}}. Disabling <code>minimal</code> it's also necessary to disable <code>cgi</code> which is a default starting from version 2.0.2.
-
-{{FileBox|filename=/etc/portage/package.use|lang=bash|
-net-analyzer/munin minimal -cgi
+== Installation ==
+=== USE flags ===
+{{USEflag
+|package=net-analyzer/munin
+|asterisk+++installs deps for monitoring Asterisk
+|doc+++Adds extra documentation (API, Javadoc, etc). It is recommended to enable per package instead of globally
+|irc+++installs deps for monitoring IRC
+|java+++Adds support for Java
+|memcached+++installs deps for monitoring memcached
+|minimal+++installs only the munin-node, applicable if the host is not the munin master installation"
+|mysql+++Adds mySQL Database support
+|postgres+++Adds support for the postgresql database
+|ssl+++Adds support for Secure Socket Layer connections
 }}
 
-The nodes shouldn't in general need any particular configuration specific to Gentoo, so you can follow the upstream manual just fine. In general you can use the {{c|munin-node-configure}} command to enable all the plugins that can be used on a system; this is not recommended though, simply because some of the data might not be of interest and would simply add load to the system when executed.
+=== Requirements ===
+You will need (optionally) need a web server such as Apache, Lighttpd, or nginx. It assumed you have a web server with root <code>/var/www/localhost/htdocs/</code>.
 
-You can use the following command to identify which plugins would be enabled:
-{{RootCmd|sudo -u munin munin-node-configure --shell}}
+=== Emerge ===
+{{Emerge|params=--ask --verbose| net-analyzer/munin}}
 
-'''Some of the plugins that are installed might not be functional due to missing dependencies; check [[Munin#USE_flags|the USE flags description]] for further information.'''
-
-If the selection sounds correct, you can execute the script by using the following command, or simply manually link the plugins you're interested in.
-
-{{RootCmd|sudo -u munin munin-node-configure --shell {{!}} /bin/bash}}
-
-Finally you have to start up the service and set it for automatic start.
-
-{{RootCmd
-|/etc/init.d/munin-node start
-|rc-update add munin-node default
-}}
-
-=== Master ===
-The Munin master has the task of fetching the values reported by the nodes and producing a report, composed of HTML pages and PNG graphs. This can be done either within the cron job (so that the pages are generated statically) or via the CGI scripts that come installed by default. In either case you're likely going to need a [[:Category:Web servers|web server]] to display the reports.
-
-When setting up a Munin master you have to make sure the <code>minimal</code> USE flag is not enabled.
-
-{{FileBox|filename=/etc/portage/package.use|lang=bash|
-net-analyzer/munin -minimal
-}}
-
-Starting from version 2, it's possible to have both the HTML pages and the graph images generated by CGI scripts. While this was for a while enabled by default upstream, at the moment, this is disabled. Starting from ebuild 2.0.7-r6, the support for CGI in the ebuild is nigh-complete.
-
-==== cron configuration ====
-The Munin master needs to executed periodically a script that gathers the data from the configured nodes; this can be set up in cron by simply using the following command:
-
+=== Configuration ===
+First we must install the munin cronjob
 {{Emerge|params=--config| net-analyzer/munin}}
 
-This will set up a cron job for the <code>munin</code> user to execute every five minutes. It is designed to work with [[vixie-cron]], [[dcron]] and [[fcron]] (as of version 2.0.3). The user should already be listed in the <code>cron</code> group required to use the service.
-
-==== Generating reports through cron ====
-If you want to generate the reports statically, you might want to disable the <code>cgi</code> USE flag. Please note that disabling the cgi USE flag will also stop you from zooming into graph.
-
-{{FileBox|filename=/etc/portage/package.use|lang=bash|
-net-analyzer/munin -minimal -cgi
-}}
-
-The default configuration will put the generated files in {{Path|/var/www/localhost/htdocs/munin}} which makes it work out of the box with Apache2 and lighttpd as http://localhost/munin/ — but this might not be suitable or desirable for your setup. If you want to change the path where the files are placed, either to change it to a different virtual host or to a different path, you just have to edit {{Path|/etc/munin/munin.conf}}:
-
-{{FileBox|filename=/etc/munin/munin.conf|lang=bash|
-graph_strategy cron
-html_strategy cron
-
-# we want to use http://localhost/monitor/ to access the report
-htmldir /var/www/localhost/htdocs/monitor
-}}
-
-==== Generating report through CGI ====
-For generating the graphs, and/or the HTML pages, through CGI, you need to make sure the <code>cgi</code> USE flag is enabled, and if you use Apache, you need to enable <code>apache</code> USE flag as well.
-
-{{FileBox|filename=/etc/portage/package.use|lang=bash|
-net-analyzer/munin -minimal cgi # apache
-}}
-
-By default, the ebuild will assume that if you want to use Apache, the <code>apache</code> user will be the one executing the CGI, but if you don't enable it, it'll default to <code>munin</code>. Make sure that however you set up your CGI setting, it uses the correct user.
-
-Please note that for CGI to work, the user executing the scripts need to have access to {{Path|/var/log/munin/munin-cgi-graph.log}} and {{Path|/var/cache/munin-cgi/}}.
-
-===== Graph-only CGI =====
-{{FileBox|filename=/etc/munin/munin.conf|lang=bash|
-cgitmpdir /var/cache/munin-cgi/
-cgiurl_graph /munin-cgi/munin-cgi-graph
-graph_strategy cgi
-html_strategy cron
-
+Now set the htmldir (this will probably not need to be changed, the default should be fine). This folder must be writeable for the user <code>munin</code>, the config command should take care of this.
+{{File|/var/munin/munin.conf||<pre>
 htmldir /var/www/localhost/htdocs/munin
-}}
+</pre>}}
 
-{{FileBox|filename=/etc/apache2/vhosts.d/default_vhost.include|lang=apache|
-Include /etc/apache2/vhosts.d/munin.include
-}}
+Enable <code>crontab</code> for <code>munin</code>, by adding <code>munin</code> to the <code>cron</code> group.
+{{RootCmd|gpasswd -a munin cron}}
 
-===== Full CGI =====
-{{FileBox|filename=/etc/munin/munin.conf|lang=bash|
-cgitmpdir /var/cache/munin-cgi/
-cgiurl_graph /munin-cgi/munin-cgi-graph
-graph_strategy cgi
-html_strategy cgi
+Lastly we need to tell munin which statistics to gather. There is a nice command to do this for us.
+{{RootCmd|sudo -u munin munin-node-configure --shell}}
+This will check your system for statistics that can be gathered safely and create symlinks in the <code>/etc/munin/</code> directory.
 
-htmldir /var/www/localhost/htdocs/munin
-}}
+Finally, we need to make munin-node start on boot.
+{{RootCmd|rc-update add munin-node default}}
 
-{{FileBox|filename=/etc/conf.d/apache2|lang=apache|<nowiki>
-APACHE2_OPTS="-D DEFAULT_VHOST -D INFO -D MUNIN_HTML_CGI"
-</nowiki>}}
+And then start it.
+{{RootCmd|/etd/init.d/munin-node start}}
 
-{{FileBox|filename=/etc/apache2/vhosts.d/default_vhost.include|lang=apache|
-Include /etc/apache2/vhosts.d/munin.include
-}}
+You will need to wait a while for munin to output the first set of graphs (it needs time to gather statistics).
 
-===== Static reports with CGI zoom =====
-{{FileBox|filename=/etc/munin/munin.conf|lang=bash|
-cgitmpdir /var/cache/munin-cgi/
-cgiurl_graph /munin-cgi/munin-cgi-graph
-graph_strategy cron
-html_strategy cron
-
-htmldir /var/www/localhost/htdocs/munin
-}}
-
-{{FileBox|filename=/etc/apache2/vhosts.d/default_vhost.include|lang=apache|
-Include /etc/apache2/vhosts.d/munin.include
-}}
-
-=== SSH Transport and Munin Async ===
-{{Note|This section discuss Munin async as it's implemented from version 2.0.7-r5 onward. Anything before that is completely messed up and is not worth trying.}}
-
-Starting from version 2, Munin supports a direct implementation of SSH transport, which allows to gather data from remote nodes that only allow SSH access through the firewall. Using this method allows for people to authenticate all requests.
-
-This is implemented by generating SSH keypairs for the <code>munin</code> user on the master, and accepting them on the nodes for a compatible user. Since the <code>munin</code> user should not be allowed to log-in, as this can induce security issues, it's important to choose a different user to connect to, such as <code>scponly</code>. The Munin ebuild is providing an adequate user in form of <code>munin-async</code> which is also usable for the asynchronous node access.
-
-The public keys to use for allowing access to Munin are generated by <code>emerge --config net-analyzer/munin</code> and are stored as {{Path|/var/lib/munin/.ssh/id_rsa.pub}} and {{Path|/var/lib/munin/.ssh/id_ecdsa.pub}}. You're suggested to use the latter if your SSH supports it. To use the <code>munin-async</code> user, you should copy one or both of them in {{Path|/var/spool/munin-async/.ssh/authorized_keys}}.
-
-After Munin gets access to the box you have to provide a way for it to contact the Munin node; Munin expects the standard input/output streams of the SSH process to connect straight into the node itself, so the upstream-suggested command to provide is <code>/usr/bin/nc localhost 4949</code>. If you have a recent enough OpenSSH, though, there is a simpler way by using the <code>-W</code> option, by leaving the command section empty:
-
-{{FileBox|filename=/etc/munin/munin.conf|1=
-[node.example.com]
-address ssh://munin-async@node.example.com/ -W localhost:4949
-}}
-
-This will automatically forward input and output to the given address pair without having to execute any other command on the server side. It's quite useful if you have one SSH-able gateway and a number of nodes that are available behind it.
-
-Alternatively it's possible to use the Asynchronous Node. This requires enabling the <code>munin-async</code> service on the node itself, so that it fetches and stores locally the plugins' output, and then sends them to the master when it starts up. For a more thorough description of the Asynchronous Node, please see [http://blog.flameeyes.eu/2012/10/asynchronous-munin this post by Flameeyes] until more proper documentation is available.
-
-To use the asynchronous node, you just need to provide a slightly different command to the SSH protocol for munin:
-
-{{FileBox|filename=/etc/munin/munin.conf|1=
-[node.example.com]
-address ssh://munin-async@node.example.com/usr/libexec/munin/munin-async --spoolfetch
-}}
-
-The <code>--spoolfetch</code> option provides a batch of updates to the master since last time it connected to that particular node, and helps avoiding blank spaces in the graph itself caused by network congestions.
-
-It's also possible to access an Async node running locally without using SSH, this is achieved by using the '''cmd://''' protocol:
-
-{{FileBox|filename=/etc/munin/munin.conf|1=
-[node.example.com]
-address cmd:///usr/libexec/munin/munin-async --spoolfetch
-}}
-
-Please note that there are ''three'' slashes after the protocol definition, because the hostname has to be kept emtpy.
-
-== Integration with Nagios or Icinga ==
-While Munin already provides some degree of warning notification when the nodes' data reaches given thresholds, it doesn't even come near the flexibility of dedicated software such as [[Nagios]] or Icinga. Luckily, instead of having to set up the tests twice to provide the data to the two of them, it's possible to make the Munin master forward the problem statuses to Nagios or Icinga through the NSCA software available in {{Package|net-analyzer/nsca}}.
-
-The ''nsca'' package needs to be installed on both the Munin master, which will send the data for the passive check, and on the Nagios host (which will receive it). If they are both on the same system, that simplifies it just a little. For split systems, it's possible to enable the <code>minimal</code> USE flag for {{Package|net-analyzer/nsca}} on Munin master, to only get the {{Path|send_nsca}} command.
-
-=== Nagios/Icinga host side ===
-
-Make sure that ''nsca'' is installed in full:
-
-{{FileBox|filename=/etc/portage/package.use|1=
-net-analyzer/nsca -minimal
-}}
-
-The package will install configuration files for both Nagios and Icinga, with the default users and paths as the two packages install by default. To select one or the other, you have to change {{Path|/etc/conf.d/nsca}}. The default configurations should be fine for everybody, with the exception at most of the server address.
-
-{{FileBox|filename=/etc/conf.d/nsca|lang=bash|1=
-CFGFILE=/etc/icinga/nsca.cfg
-# CFGFILE=/etc/nagios/nsca.cfg
-}}
-
-On the Nagios/Icinga side itself, your configuration will depend on the title of the graph that Munin exports; for instance if you're receiving a warning from the '''df''' plugin, you should pick up as title ''Disk usage in percent''. (There were some titles that are not valid check names for Nagios, but as of {{Package|net-analyzer/munin-2.0.7-r5}} all the default plugins' titles are cleaned up.) Then you need to create a passive service check for it in your configuration, similar to this:
-
-{{CodeBox|1=
-define service{
-  use local-service
-  name munin-service
-  register 0
-  active_checks_enabled 0
-  passive_checks_enabled 1
-  parallelize_check 1
-  event_handler_enabled 1
-  is_volatile 1
-  check_command check_dummy!0
-}
-
-define service {
-  use munin-service
-  name munin-diskusage
-  register 0
-  service_description Disk usage in percent
-}
-}}
-
-(This is a template-based service, which makes it very simple to add further service checks using Munin's alerts.)
-
-=== Munin master side ===
-
-TBW
-
-== Gentoo Linux exclusives ==
-There are a few things in Munin that are only available with the Gentoo Linux ebuilds, either because they fit better our design or because upstream is not ready (yet) for them.
-
-In particular as of August 2012, the IPMI plugin shipping with Munin 2.0 and later is not the official one shipped by upstream, but a new one, developed by [[User:Flameeyes|Flameeyes]] and based off FreeIPMI. The reason of this change is that the previous plugin, using ipmitool, would time out on most HP and SuperMicro servers when fetching sensors' data.
-
-The new plugin is not available in the official Munin package because it requires a fairly recent FreeIPMI version (much newer than the latest available for Debian and Fedora) even to get near the feature list of the original plugin, while it requires an unreleased, or patched, version to surpass the original plugin. In Portage this is mandated by depending on version 1.1.6-r1 or later (which has been patched to support outputting thresholds, otherwise available only on 1.2.x series).
-
-This IPMI plugin is also able to monitor foreign hosts, and is backward compatible with both '''ipmi_''' and '''ipmi_sensor_'''. Finally, it does not require the use of '''gawk''' but works with any POSIX-compatible awk implementation.
-
-== Troubleshooting ==
-The most common problem is graphs are not generated. 
-Check for problems by executing <code>/usr/bin/munin-cron</code>
-{{RootCmd|sudo -u munin /usr/bin/munin-cron}}
-
-Common errors include not restarting <code>munin-node</code> after adding plugins.
-
-== See Also ==
-* [[Munin maintenance]] - Notes from the Munin maintainers for Gentoo Linux.
-
-== External resources ==
-* [http://munin-monitoring.org/wiki/FAQ_no_graphs Missing graphs]
-* [http://blog.flameeyes.eu/tag/munin Flameeyes's Munin-related posts]
-* [https://munin.readthedocs.org Official Munin Documentation]
-
+[[Category:Software]]
 [[Category:Monitoring]]
