--- a/Kodi.mw
+++ b/Kodi.mw
@@ -1,124 +1,34 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://kodi.tv/|header=true}}
-|{{InfoBox github|xbmc/xbmc}}
-|{{InfoBox odoc|https://kodi.wiki/}}
-}}
+== XBMC Autostart ==
+This is based on the way the mythtv ebuilds enable the autostart auf the mythtv frontend. But since XBMC is the better fronted, I want XBMC to autostart on boot. :)
 
-'''Kodi''' (formerly XBMC) is [[Article description::an open source home theater application.]]
+First create the xbmc user
+{{RootCmd|useradd -d /home/xbmc -m -G audio,cdrom,video,cdrw,usb,users xbmc}}
 
-== Installation ==
+Then create the login scripts
+{{File|/home/xbmc/.bash_profile||
+<pre>
+/home/xbmc/.bash_profile
+# .bash_profile
+case "`tty`" in
+        *tty9) startx; logout ;;
+esac
+</pre>}}
 
-=== USE flags ===
-
-{{USEflag|package=media-tv/kodi}}
-
-=== Emerge ===
-
-{{Emerge|media-tv/kodi}}
-
-== Configuration ==
-
-=== Create user ===
-
-First create the {{c|kodi}} user:
-
-{{RootCmd|useradd -m -G audio,cdrom,video,cdrw,usb,users kodi}}
-
-To add support for HDMI CEC:
-
-{{RootCmd|gpasswd --add kodi uucp}}
-
-== Services ==
-
-=== OpenRC + xinit ===
-
-Then define the Kodi {{Path|init.d}} file with the following contents:
-
-{{FileBox|filename=/etc/init.d/kodi|lang=bash|1=
-#!/sbin/openrc-run
-# Released under the 2-clause BSD license.
-
-KODI_USER=${KODI_USER:-kodi}
-KODI_HOME=$(getent passwd "${KODI_USER%:*}" {{!}} cut -d ':' -f 6)
-
-command="/usr/bin/xinit"
-command_args="/usr/bin/kodi-standalone ${KODI_OPTS} -- :0"
-command_user="${KODI_USER}"
-command_background="yes"
-description="Start and stop Kodi"
-directory="${KODI_HOME}"
-name="Kodi"
-pidfile="/var/run/kodi.pid"
-
-depend()
-{
-	need net
-}
-}}
-
-Set the appropriate permissions:
-
-{{RootCmd|chmod +x /etc/init.d/kodi}}
-
-And tell OpenRC to start it on boot:
-
-{{RootCmd|rc-update add kodi default}}
-
-=== Using inittab ===
-
-First create the {{c|kodi}} user [[#Create user|(see above)]]. This is based on the way the MythTV ebuilds enable the autostart of the MythTV frontend.
-
-Define an {{Path|.xinitrc}} file in {{c|kodi}}'s home:
-
-{{FileBox|filename=/home/kodi/.xinitrc|lang=bash|1=
+{{File|/home/xbmc/.xinit||
+<pre>
+# .xinitrc
 [ -x /usr/bin/nvidia-settings ] && /usr/bin/nvidia-settings -l
 /usr/bin/xset s noblank
 /usr/bin/xset s off
 /usr/bin/xset -dpms
 /usr/bin/evilwm &
-exec /usr/bin/kodi
-}}
+exec /usr/bin/xbmc
+</pre>}}
 
-Then create the login scripts:
-
-{{FileBox|filename=/home/kodi/.bash_profile|lang=bash|1=
-case "`tty`" in
-        *tty9) startx; logout ;;
-esac
-}}
-
-Finally append an inittab entry which does the autologin:
-
-{{FileBox|filename=/etc/inittab|1=
-# Start Kodi
-c9:2345:respawn:/sbin/mingetty --autologin kodi tty9
-}}
-
-== Gentoo Hardened ==
-
-Running Kodi on a [[Hardened/Introduction to Hardened Gentoo|Hardened Gentoo]] installation is possible. To avoid grsecurity interfering with network connectivity, the <var>CONFIG_GRKERNSEC_PROC_USER</var> kernel option must not be enabled.
-
-Should you require a restricted {{Path|/proc}} filesystem, use <var>CONFIG_GRKERNSEC_PROC_USERGROUP</var> and set <var>GRKERNSEC_PROC_GID</var> to the ID of a group that the user running Kodi is a member of.
-
-== Usage ==
-
-=== Shutdown ===
-
-Allow the {{c|kodi}} user to issue an shutdown via [[polkit]], resulting in a shutdown option in the Kodi menu:
-
-{{FileBox|filename=/etc/polkit-1/rules.d/60-kodi.rules|lang=javascript|
-polkit.addRule(function(action, subject) {
-        if (( (action.id.indexOf("org.freedesktop.udisks.") {{=}}{{=}} 0) {{!}}{{!}} (action.id.indexOf("org.freedesktop.upower."){{=}}{{=}} 0) {{!}}{{!}} (action.id.indexOf("org.freedesktop.consolekit."){{=}}{{=}} 0) ) &&
-        subject.user{{=}}{{=}}"kodi") {
-        return polkit.Result.YES;
-        }
-});
-}}
-
-{{Note|Ensure the <code>udev</code> USE flag is set for shutdown to work.}}
-
-== External resources ==
-
-* [https://github.com/frace/kodi-overlay Unofficial Kodi Overlay]
-
-[[Category:Multimedia]]
+Finally add an inittab entry which does the autologin
+{{File|/etc/inittab||
+<pre>
+...
+c9:2345:respawn:/sbin/mingetty --autologin xbmc tty9
+...
+</pre>}}
