--- a/Gnokii.mw
+++ b/Gnokii.mw
@@ -1,23 +1,29 @@
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox homepage|http://gnokii.org|header=true}}
-|{{InfoBox wikipedia}}
+modem/fax driver for the mobile phones
+
+== Setup ==
+{{USEflag
+|package=app-mobilephone/gnokii
+|X++Adds support for X11
+|ical++Enable support for dev-libs/libical
+|irda++ Enables infrared support
+|mysql++Enable MySQL database backend
+|nls++Adds Native Language Support (using gettext - GNU locale utilities)
+|postgres++Enable PostgreSQL database backend
+|sms++Enable SMS support (build smsd)
+|usb++Adds USB support to applications that have optional USB support (e.g. cups)
+|bluetooth++Enables Bluetooth Support
+|debug++Enable extra debug codepaths, like asserts and extra output. If you want to get meaningful backtraces see http://www.gentoo.org/proj/en/qa/backtraces.xml
 }}
-'''gnokii''' is a modem and fax driver for mobile phones.
 
-== Installation ==
+== Install gnokii ==
 
-=== USE flags ===
+Install gnokii with the ''sms usb'' use flags enabled.
 
-{{USEflag|package=app-mobilephone/gnokii}}
+=== Configuration ===
+Login with root user.
 
-=== Emerge ===
-
-{{Emerge|app-mobilephone/gnokii}}
-
-== Configuration ==
-Edit the {{Path|/etc/gnokiirc}} file:
-{{FileBox|filename=/etc/gnokiirc|lang=ini|1=
+Edit the /etc/gnokiirc file:
+{{File|/etc/gnokiirc:||<pre>
 [global]
 port = /dev/ttyUSB0
 model = AT
@@ -40,36 +46,35 @@ debug = on
 
 rlpdebug = off
 xdebug = off
-}}
+</pre>}}
 
 Setup save the password for PIN login
-{{FileBox|filename=/etc/sms-pin|1=
+{{File|/etc/sms-pin:||<pre>
 ABORT BUSY
 ABORT ERROR
 ABORT 'NO CARRIER'
 REPORT CONNECT
 TIMEOUT 10
 # Set your pin here
-"" "AT+CPIN=0000
-}}
-
-== Usage ==
+"" "AT+CPIN=0000</pre>}}
 
 === Set PIN to work with gnokii ===
-/usr/sbin/chat is part of {{Package|net-dialup/ppp}}.
+/usr/sbin/chat is part of 
+net-dialup/ppp
 {{RootCmd|/usr/sbin/chat -V -f /etc/sms-pin >> /dev/ttyUSB0 < /dev/ttyUSB0}}
 
 An other way is just using gnokii:
 {{Cmd|gnokii  --entersecuritycode PIN}}
 
 Show the PIN status:
-{{Cmd|gnokii --getsecuritycodestatus &#124; grep PIN}}
+{{Cmd|gnokii --getsecuritycodestatus | grep PIN}}
 
 === Sending SMS ===
-{{Cmd|echo "test" &#124; gnokii --sendsms +land_and_telephonenumber}}
+
+{{Cmd|echo "test" | gnokii --sendsms +land_and_telephonenumber}}
 
 === Write calendar notes ===
-{{FileBox|filename=gnokii-import.sh|lang=bash|1=
+{{File|gnokii-import.sh:||<pre>
 #!/bin/bash
 #########################################################
 # gnokii ical import script to fix buggy write mode     #
@@ -78,7 +83,7 @@ Show the PIN status:
 read -p "Please give path and file name: " file
 
 declare -i a
-a=$(grep -ir "SUMMARY:" $file {{!}} wc -l) # count the entries
+a=$(grep -ir "SUMMARY:" $file | wc -l) # count the entries
 
 
 for i in `seq 1 $a`;do
@@ -86,9 +91,9 @@ echo $i
 gnokii --writecalendarnote $file $i
 sleep 1 # wait a second before the next entry is written
 done
-}}
+</pre>}}
 
-{{FileBox|filename=cal.ical|1=
+{{File|cal.ical:||<pre>
 BEGIN:VCALENDAR
 VERSION:1.0
 BEGIN:VEVENT
@@ -99,9 +104,10 @@ DTEND:20080415T210000
 DALARM:20080414T210000
 END:VEVENT
 END:VCALENDAR
-}}
+</pre>}}
 
 {{Cmd|gnokii-import.sh}}
 {{Cmd|cal.ica}}
 
+[[Category:gnokii]]
 [[Category:Software]]
